--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,7 @@
     "format": "prettier --write \"src/**/*.ts\""
   },
   "keywords": ["game-server", "websocket", "authentication"],
-  "author": "",
+  "author": "Erce Ozmetin",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
@@ -42,6 +42,7 @@
     "@types/jest": "^29.5.3",
     "ts-jest": "^29.1.1",
     "@types/supertest": "^2.0.12",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "socket.io-client": "^4.6.1"
   }
 }
