--- a/server/package.json
+++ b/server/package.json
@@ -10,39 +10,52 @@
     "test": "jest --coverage",
     "test:watch": "jest --watch",
     "test:unit": "jest --testPathPattern=tests/unit",
+    "load-test:setup": "cd ../load-tests && npm run setup",
+    "load-test:api": "cd ../load-tests && npm run test:api",
+    "load-test:websocket": "cd ../load-tests && npm run test:websocket",
+    "load-test:matchmaking": "cd ../load-tests && npm run test:matchmaking",
+    "load-test:all": "cd ../load-tests && npm run test:all",
+    "load-test:quick": "cd ../load-tests && npm run test:quick",
     "lint": "eslint src --ext .ts",
     "format": "prettier --write \"src/**/*.ts\""
   },
-  "keywords": ["game-server", "websocket", "authentication"],
+  "keywords": [
+    "game-server",
+    "websocket",
+    "authentication"
+  ],
   "author": "Erce Ozmetin",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "socket.io": "^4.6.1",
-    "pg": "^8.11.3",
-    "redis": "^4.6.7",
-    "jsonwebtoken": "^9.0.2",
+    "@tank-royale/shared": "*",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "express-rate-limit": "^6.10.0",
     "dotenv": "^16.3.1",
-    "@tank-royale/shared": "*"
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.10.0",
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.11.3",
+    "prom-client": "^15.1.3",
+    "redis": "^4.6.7",
+    "socket.io": "^4.6.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.3",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.4.2",
     "@types/pg": "^8.10.2",
-    "@types/bcrypt": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/cors": "^2.8.13",
-    "typescript": "^5.1.6",
-    "ts-node-dev": "^2.0.0",
-    "jest": "^29.6.1",
-    "@types/jest": "^29.5.3",
-    "ts-jest": "^29.1.1",
     "@types/supertest": "^2.0.12",
+    "artillery": "^2.0.26",
+    "artillery-plugin-metrics-by-endpoint": "^1.20.0",
+    "jest": "^29.6.1",
+    "socket.io-client": "^4.8.1",
     "supertest": "^6.3.3",
-    "socket.io-client": "^4.6.1"
+    "ts-jest": "^29.1.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.1.6"
   }
 }
