--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -6,23 +6,23 @@ scrape_configs:
   # Node.js application metrics
   - job_name: 'tank-royale-server'
     static_configs:
-      - targets: ['server:3000']
+      - targets: ['host.containers.internal:3000']
     metrics_path: '/metrics'
 
   # Redis metrics
   - job_name: 'redis'
     static_configs:
-      - targets: ['redis-exporter:9121']
+      - targets: ['tank-redis-exporter:9121']
 
   # PostgreSQL metrics
   - job_name: 'postgres'
     static_configs:
-      - targets: ['postgres-exporter:9187']
+      - targets: ['tank-postgres-exporter:9187']
 
   # Node exporter for system metrics
   - job_name: 'node'
     static_configs:
-      - targets: ['node-exporter:9100']
+      - targets: ['tank-node-exporter:9100']
 
   # Prometheus self-monitoring
   - job_name: 'prometheus'
