--- a/.gitignore
+++ b/.gitignore
@@ -151,3 +151,4 @@ postman/*.postman_environment.json
 server/docs/TESTING_SUMMARY.md
 server/TEST_VERIFICATION.md
 docs/WEBSOCKET_MATCHMAKING.md
+/docs
