--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
     "@testing-library/dom": "^10.4.1",
     "@types/node": "^20.10.6",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
