--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Server Configuration
-NODE_ENV=development
-PORT=3000
-GAME_SERVER_PORT=3001
+API_SERVER_PORT=8080
+GAME_SERVER_PORT=8081
+ENVIRONMENT=development
 
 # Database - PostgreSQL
 POSTGRES_HOST=localhost
